--- a/remram.ioc
+++ b/remram.ioc
@@ -27,39 +27,60 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM5
-Mcu.IP8=USB_DEVICE
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP10=UART8
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM5
+Mcu.IPNb=13
 Mcu.Name=STM32F765V(G-I)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PH0/OSC_IN
-Mcu.Pin1=PH1/OSC_OUT
-Mcu.Pin10=PB10
-Mcu.Pin11=PB11
-Mcu.Pin12=PA8
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PA15
-Mcu.Pin18=PB3
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PC0
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin3=PC1
-Mcu.Pin4=PC2
-Mcu.Pin5=PA0/WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=21
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PC0
+Mcu.Pin11=PC1
+Mcu.Pin12=PC2
+Mcu.Pin13=PA0/WKUP
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA3
+Mcu.Pin17=PA5
+Mcu.Pin18=PA6
+Mcu.Pin19=PA7
+Mcu.Pin2=PE4
+Mcu.Pin20=PB10
+Mcu.Pin21=PB11
+Mcu.Pin22=PA8
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PA15
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
+Mcu.Pin3=PE5
+Mcu.Pin30=PB5
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=PB8
+Mcu.Pin34=PB9
+Mcu.Pin35=PE0
+Mcu.Pin36=PE1
+Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin4=PE6
+Mcu.Pin5=PC13
+Mcu.Pin6=PC14/OSC32_IN
+Mcu.Pin7=PC15/OSC32_OUT
+Mcu.Pin8=PH0/OSC_IN
+Mcu.Pin9=PH1/OSC_OUT
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F765VITx
@@ -87,6 +108,8 @@ PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Signal=S_TIM2_CH1_ETR
+PA2.Signal=S_TIM5_CH3
+PA3.Signal=S_TIM5_CH4
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
@@ -98,8 +121,26 @@ PA8.Signal=RCC_MCO_1
 PB10.Signal=S_TIM2_CH3
 PB11.Signal=S_TIM2_CH4
 PB3.Signal=S_TIM2_CH2
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.Locked=true
+PB5.Signal=S_TIM3_CH2
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC0.Signal=ADCx_IN10
 PC1.Signal=ADCx_IN11
+PC13.Locked=true
+PC13.Signal=GPIO_Output
+PC14/OSC32_IN.Locked=true
+PC14/OSC32_IN.Signal=GPIO_Output
+PC15/OSC32_OUT.Locked=true
+PC15/OSC32_OUT.Signal=GPIO_Output
 PC2.Signal=ADCx_IN12
 PCC.Checker=false
 PCC.Line=STM32F7x5
@@ -109,6 +150,20 @@ PCC.Seq0=0
 PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.3
+PE0.Mode=Asynchronous
+PE0.Signal=UART8_RX
+PE1.Mode=Asynchronous
+PE1.Signal=UART8_TX
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.Locked=true
+PE5.Signal=GPIO_Output
+PE6.Locked=true
+PE6.Signal=GPIO_Output
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
@@ -194,10 +249,18 @@ SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
 SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
 SH.S_TIM5_CH2.ConfNb=1
+SH.S_TIM5_CH3.0=TIM5_CH3,PWM Generation3 CH3
+SH.S_TIM5_CH3.ConfNb=1
+SH.S_TIM5_CH4.0=TIM5_CH4,PWM Generation4 CH4
+SH.S_TIM5_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=54.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -210,9 +273,14 @@ TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
 TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
