First draft of RemRam.
I added a 20 pin expansion connector with the following pins:
 - SPI
 - I2C
 - USART
 - 4x PWM
 - 4x GPIO

--- a/remram.ioc
+++ b/remram.ioc
@@ -27,7 +27,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=UART8
+Mcu.IP10=USART1
 Mcu.IP11=USB_DEVICE
 Mcu.IP12=USB_OTG_FS
 Mcu.IP2=I2C1
@@ -54,38 +54,69 @@ Mcu.Pin17=PA5
 Mcu.Pin18=PA6
 Mcu.Pin19=PA7
 Mcu.Pin2=PE4
-Mcu.Pin20=PB10
-Mcu.Pin21=PB11
-Mcu.Pin22=PA8
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PA15
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
+Mcu.Pin20=PC4
+Mcu.Pin21=PC5
+Mcu.Pin22=PB0
+Mcu.Pin23=PB1
+Mcu.Pin24=PB2
+Mcu.Pin25=PE10
+Mcu.Pin26=PE11
+Mcu.Pin27=PE12
+Mcu.Pin28=PE13
+Mcu.Pin29=PE14
 Mcu.Pin3=PE5
-Mcu.Pin30=PB5
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=PB8
-Mcu.Pin34=PB9
-Mcu.Pin35=PE0
-Mcu.Pin36=PE1
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=PE15
+Mcu.Pin31=PB10
+Mcu.Pin32=PB11
+Mcu.Pin33=PB12
+Mcu.Pin34=PB13
+Mcu.Pin35=PB14
+Mcu.Pin36=PB15
+Mcu.Pin37=PD8
+Mcu.Pin38=PD9
+Mcu.Pin39=PD10
 Mcu.Pin4=PE6
+Mcu.Pin40=PD11
+Mcu.Pin41=PD12
+Mcu.Pin42=PD13
+Mcu.Pin43=PD14
+Mcu.Pin44=PD15
+Mcu.Pin45=PC6
+Mcu.Pin46=PC7
+Mcu.Pin47=PC8
+Mcu.Pin48=PC9
+Mcu.Pin49=PA8
 Mcu.Pin5=PC13
+Mcu.Pin50=PA9
+Mcu.Pin51=PA10
+Mcu.Pin52=PA11
+Mcu.Pin53=PA12
+Mcu.Pin54=PA13
+Mcu.Pin55=PA14
+Mcu.Pin56=PA15
+Mcu.Pin57=PC10
+Mcu.Pin58=PC11
+Mcu.Pin59=PC12
 Mcu.Pin6=PC14/OSC32_IN
+Mcu.Pin60=PD4
+Mcu.Pin61=PD5
+Mcu.Pin62=PD6
+Mcu.Pin63=PB3
+Mcu.Pin64=PB4
+Mcu.Pin65=PB5
+Mcu.Pin66=PB6
+Mcu.Pin67=PB7
+Mcu.Pin68=VP_SYS_VS_Systick
+Mcu.Pin69=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin7=PC15/OSC32_OUT
 Mcu.Pin8=PH0/OSC_IN
 Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=39
+Mcu.PinsNb=70
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F765VITx
-MxCube.Version=4.25.0
-MxDb.Version=DB.4.0.250
+MxCube.Version=4.25.1
+MxDb.Version=DB.4.0.251
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -97,51 +128,188 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+PA0/WKUP.GPIOParameters=GPIO_Label
+PA0/WKUP.GPIO_Label=PWM_FAN1
+PA0/WKUP.Locked=true
 PA0/WKUP.Signal=S_TIM5_CH1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=PWN_BED
+PA1.Locked=true
 PA1.Signal=S_TIM5_CH2
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=USART_RX
+PA10.Locked=true
+PA10.Mode=Synchronous
+PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=MCU_DD-
+PA11.Locked=true
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=MCU_DD+
+PA12.Locked=true
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=SWDIO
+PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=SWCLK
+PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=X_STEP
+PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=PWM_FAN2
+PA2.Locked=true
 PA2.Signal=S_TIM5_CH3
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=PWM_HEAT
+PA3.Locked=true
 PA3.Signal=S_TIM5_CH4
+PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.Mode=Clock-out-1
-PA8.Signal=RCC_MCO_1
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=USART_CK
+PA8.Locked=true
+PA8.Mode=Synchronous
+PA8.Signal=USART1_CK
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=USART_TX
+PA9.Locked=true
+PA9.Mode=Synchronous
+PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=SS_Y
+PB0.Locked=true
+PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=SS_X
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=Z_STEP
+PB10.Locked=true
 PB10.Signal=S_TIM2_CH3
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=E_STEP
+PB11.Locked=true
 PB11.Signal=S_TIM2_CH4
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=X_MIN
+PB12.Locked=true
+PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=X_MAX
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=Y_MIN
+PB14.Locked=true
+PB14.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=Y_MAX
+PB15.Locked=true
+PB15.Signal=GPIO_Input
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=SS_SD
+PB2.Locked=true
+PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=Y_STEP
+PB3.Locked=true
 PB3.Signal=S_TIM2_CH2
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=PWM_EXT1
 PB4.Locked=true
 PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=PWM_EXT2
 PB5.Locked=true
 PB5.Signal=S_TIM3_CH2
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SCL
+PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=SDA
+PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PB8.Locked=true
-PB8.Signal=GPIO_Output
-PB9.Locked=true
-PB9.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=THERM_1
+PC0.Locked=true
 PC0.Signal=ADCx_IN10
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=THERM_2
+PC1.Locked=true
 PC1.Signal=ADCx_IN11
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=X_DIR
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=X_DIAG
+PC11.Locked=true
+PC11.Signal=GPIO_Input
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=X_EN
+PC12.Locked=true
+PC12.Signal=GPIO_Output
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=SD_CARD_DET
 PC13.Locked=true
 PC13.Signal=GPIO_Output
+PC14/OSC32_IN.GPIOParameters=GPIO_Label
+PC14/OSC32_IN.GPIO_Label=BTN_EN2
 PC14/OSC32_IN.Locked=true
-PC14/OSC32_IN.Signal=GPIO_Output
+PC14/OSC32_IN.Signal=GPIO_Input
+PC15/OSC32_OUT.GPIOParameters=GPIO_Label
+PC15/OSC32_OUT.GPIO_Label=BTN_EN1
 PC15/OSC32_OUT.Locked=true
-PC15/OSC32_OUT.Signal=GPIO_Output
+PC15/OSC32_OUT.Signal=GPIO_Input
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=THERM_3
+PC2.Locked=true
 PC2.Signal=ADCx_IN12
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=SS_E
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=SS_Z
+PC5.Locked=true
+PC5.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=LCD_BEEPER
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=BTN_ENC
+PC7.Locked=true
+PC7.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=PWM_EXT3
+PC8.Locked=true
+PC8.Signal=S_TIM3_CH3
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=PWM_EXT4
+PC9.Locked=true
+PC9.Signal=S_TIM3_CH4
 PCC.Checker=false
 PCC.Line=STM32F7x5
 PCC.MCU=STM32F765V(G-I)Tx
@@ -150,22 +318,98 @@ PCC.Seq0=0
 PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.3
-PE0.Mode=Asynchronous
-PE0.Signal=UART8_RX
-PE1.Mode=Asynchronous
-PE1.Signal=UART8_TX
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=LCD_D7
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=LCD_D6
+PD11.Locked=true
+PD11.Signal=GPIO_Output
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=LCD_D5
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=LCD_D4
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=LCD_EN
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=LCD_RS
+PD15.Locked=true
+PD15.Signal=GPIO_Output
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=Y_EN
+PD4.Locked=true
+PD4.Signal=GPIO_Output
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=Y_DIAG
+PD5.Locked=true
+PD5.Signal=GPIO_Input
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=Y_DIR
+PD6.Locked=true
+PD6.Signal=GPIO_Output
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=Z_MIN
+PD8.Locked=true
+PD8.Signal=GPIO_Input
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=Z_MAX
+PD9.Locked=true
+PD9.Signal=GPIO_Input
+PE10.GPIOParameters=GPIO_Label
+PE10.GPIO_Label=E_DIR
+PE10.Locked=true
+PE10.Signal=GPIO_Output
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=E_EN
+PE11.Locked=true
+PE11.Signal=GPIO_Output
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=E_DIAG
+PE12.Locked=true
+PE12.Signal=GPIO_Input
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=Z_DIR
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=Z_DIAG
+PE14.Locked=true
+PE14.Signal=GPIO_Output
+PE15.GPIOParameters=GPIO_Label
+PE15.GPIO_Label=Z_EN
+PE15.Locked=true
+PE15.Signal=GPIO_Output
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=EXT_D4
 PE2.Locked=true
 PE2.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=EXT_D3
 PE3.Locked=true
 PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=EXT_D2
 PE4.Locked=true
 PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=EXT_D1
 PE5.Locked=true
 PE5.Signal=GPIO_Output
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=KILL_PIN
 PE6.Locked=true
-PE6.Signal=GPIO_Output
+PE6.Signal=GPIO_Input
+PH0/OSC_IN.Locked=true
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
+PH1/OSC_OUT.Locked=true
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
@@ -253,6 +497,10 @@ SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
 SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
@@ -272,15 +520,19 @@ TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Channel-PWM Generation2 CH2
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2
 TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
+USART1.IPParameters=VirtualMode-Synchronous
+USART1.VirtualMode-Synchronous=VM_SYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
