--- a/remram.ioc
+++ b/remram.ioc
@@ -46,72 +46,74 @@ Mcu.Pin1=PE3
 Mcu.Pin10=PC0
 Mcu.Pin11=PC1
 Mcu.Pin12=PC2
-Mcu.Pin13=PA0/WKUP
-Mcu.Pin14=PA1
-Mcu.Pin15=PA2
-Mcu.Pin16=PA3
-Mcu.Pin17=PA5
-Mcu.Pin18=PA6
-Mcu.Pin19=PA7
+Mcu.Pin13=PC3
+Mcu.Pin14=PA0/WKUP
+Mcu.Pin15=PA1
+Mcu.Pin16=PA2
+Mcu.Pin17=PA3
+Mcu.Pin18=PA4
+Mcu.Pin19=PA5
 Mcu.Pin2=PE4
-Mcu.Pin20=PC4
-Mcu.Pin21=PC5
-Mcu.Pin22=PB0
-Mcu.Pin23=PB1
-Mcu.Pin24=PB2
-Mcu.Pin25=PE10
-Mcu.Pin26=PE11
-Mcu.Pin27=PE12
-Mcu.Pin28=PE13
-Mcu.Pin29=PE14
+Mcu.Pin20=PA6
+Mcu.Pin21=PA7
+Mcu.Pin22=PC4
+Mcu.Pin23=PC5
+Mcu.Pin24=PB0
+Mcu.Pin25=PB1
+Mcu.Pin26=PB2
+Mcu.Pin27=PE10
+Mcu.Pin28=PE11
+Mcu.Pin29=PE12
 Mcu.Pin3=PE5
-Mcu.Pin30=PE15
-Mcu.Pin31=PB10
-Mcu.Pin32=PB11
-Mcu.Pin33=PB12
-Mcu.Pin34=PB13
-Mcu.Pin35=PB14
-Mcu.Pin36=PB15
-Mcu.Pin37=PD8
-Mcu.Pin38=PD9
-Mcu.Pin39=PD10
+Mcu.Pin30=PE13
+Mcu.Pin31=PE14
+Mcu.Pin32=PE15
+Mcu.Pin33=PB10
+Mcu.Pin34=PB11
+Mcu.Pin35=PB12
+Mcu.Pin36=PB13
+Mcu.Pin37=PB14
+Mcu.Pin38=PB15
+Mcu.Pin39=PD8
 Mcu.Pin4=PE6
-Mcu.Pin40=PD11
-Mcu.Pin41=PD12
-Mcu.Pin42=PD13
-Mcu.Pin43=PD14
-Mcu.Pin44=PD15
-Mcu.Pin45=PC6
-Mcu.Pin46=PC7
-Mcu.Pin47=PC8
-Mcu.Pin48=PC9
-Mcu.Pin49=PA8
+Mcu.Pin40=PD9
+Mcu.Pin41=PD10
+Mcu.Pin42=PD11
+Mcu.Pin43=PD12
+Mcu.Pin44=PD13
+Mcu.Pin45=PD14
+Mcu.Pin46=PD15
+Mcu.Pin47=PC6
+Mcu.Pin48=PC7
+Mcu.Pin49=PC8
 Mcu.Pin5=PC13
-Mcu.Pin50=PA9
-Mcu.Pin51=PA10
-Mcu.Pin52=PA11
-Mcu.Pin53=PA12
-Mcu.Pin54=PA13
-Mcu.Pin55=PA14
-Mcu.Pin56=PA15
-Mcu.Pin57=PC10
-Mcu.Pin58=PC11
-Mcu.Pin59=PC12
+Mcu.Pin50=PC9
+Mcu.Pin51=PA8
+Mcu.Pin52=PA9
+Mcu.Pin53=PA10
+Mcu.Pin54=PA11
+Mcu.Pin55=PA12
+Mcu.Pin56=PA13
+Mcu.Pin57=PA14
+Mcu.Pin58=PA15
+Mcu.Pin59=PC10
 Mcu.Pin6=PC14/OSC32_IN
-Mcu.Pin60=PD4
-Mcu.Pin61=PD5
-Mcu.Pin62=PD6
-Mcu.Pin63=PB3
-Mcu.Pin64=PB4
-Mcu.Pin65=PB5
-Mcu.Pin66=PB6
-Mcu.Pin67=PB7
-Mcu.Pin68=VP_SYS_VS_Systick
-Mcu.Pin69=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin60=PC11
+Mcu.Pin61=PC12
+Mcu.Pin62=PD4
+Mcu.Pin63=PD5
+Mcu.Pin64=PD6
+Mcu.Pin65=PB3
+Mcu.Pin66=PB4
+Mcu.Pin67=PB5
+Mcu.Pin68=PB6
+Mcu.Pin69=PB7
 Mcu.Pin7=PC15/OSC32_OUT
+Mcu.Pin70=VP_SYS_VS_Systick
+Mcu.Pin71=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin8=PH0/OSC_IN
 Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=70
+Mcu.PinsNb=72
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F765VITx
@@ -173,6 +175,9 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=PWM_HEAT
 PA3.Locked=true
 PA3.Signal=S_TIM5_CH4
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=FAN_SPEED1
+PA4.Signal=ADCx_IN4
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
@@ -286,6 +291,9 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=THERM_3
 PC2.Locked=true
 PC2.Signal=ADCx_IN12
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=FAN_SPEED2
+PC3.Signal=ADCx_IN13
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=SS_E
 PC4.Locked=true
@@ -485,6 +493,10 @@ SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
 SH.ADCx_IN12.0=ADC1_IN12,IN12
 SH.ADCx_IN12.ConfNb=1
+SH.ADCx_IN13.0=ADC1_IN13,IN13
+SH.ADCx_IN13.ConfNb=1
+SH.ADCx_IN4.0=ADC1_IN4,IN4
+SH.ADCx_IN4.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
