Added missing change in MCU definition file.

--- a/remram.ioc
+++ b/remram.ioc
@@ -100,20 +100,21 @@ Mcu.Pin59=PC10
 Mcu.Pin6=PC14/OSC32_IN
 Mcu.Pin60=PC11
 Mcu.Pin61=PC12
-Mcu.Pin62=PD4
-Mcu.Pin63=PD5
-Mcu.Pin64=PD6
-Mcu.Pin65=PB3
-Mcu.Pin66=PB4
-Mcu.Pin67=PB5
-Mcu.Pin68=PB6
-Mcu.Pin69=PB7
+Mcu.Pin62=PD0
+Mcu.Pin63=PD4
+Mcu.Pin64=PD5
+Mcu.Pin65=PD6
+Mcu.Pin66=PB3
+Mcu.Pin67=PB4
+Mcu.Pin68=PB5
+Mcu.Pin69=PB6
 Mcu.Pin7=PC15/OSC32_OUT
-Mcu.Pin70=VP_SYS_VS_Systick
-Mcu.Pin71=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin70=PB7
+Mcu.Pin71=VP_SYS_VS_Systick
+Mcu.Pin72=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin8=PH0/OSC_IN
 Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=72
+Mcu.PinsNb=73
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F765VITx
@@ -326,6 +327,10 @@ PCC.Seq0=0
 PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=STATUS_LED
+PD0.Locked=true
+PD0.Signal=GPIO_Output
 PD10.GPIOParameters=GPIO_Label
 PD10.GPIO_Label=LCD_D7
 PD10.Locked=true
