Reworked the ground plane for better ADC isolation.

--- a/remram.ioc
+++ b/remram.ioc
@@ -88,28 +88,28 @@ Mcu.Pin48=PC7
 Mcu.Pin49=PC8
 Mcu.Pin5=PC13
 Mcu.Pin50=PC9
-Mcu.Pin51=PA8
-Mcu.Pin52=PA9
-Mcu.Pin53=PA10
-Mcu.Pin54=PA11
-Mcu.Pin55=PA12
-Mcu.Pin56=PA13
-Mcu.Pin57=PA14
-Mcu.Pin58=PA15
-Mcu.Pin59=PC10
+Mcu.Pin51=PA9
+Mcu.Pin52=PA10
+Mcu.Pin53=PA11
+Mcu.Pin54=PA12
+Mcu.Pin55=PA13
+Mcu.Pin56=PA14
+Mcu.Pin57=PA15
+Mcu.Pin58=PC10
+Mcu.Pin59=PC11
 Mcu.Pin6=PC14/OSC32_IN
-Mcu.Pin60=PC11
-Mcu.Pin61=PC12
-Mcu.Pin62=PD0
-Mcu.Pin63=PD4
-Mcu.Pin64=PD5
-Mcu.Pin65=PD6
-Mcu.Pin66=PB3
-Mcu.Pin67=PB4
-Mcu.Pin68=PB5
-Mcu.Pin69=PB6
+Mcu.Pin60=PC12
+Mcu.Pin61=PD0
+Mcu.Pin62=PD4
+Mcu.Pin63=PD5
+Mcu.Pin64=PD6
+Mcu.Pin65=PB3
+Mcu.Pin66=PB4
+Mcu.Pin67=PB5
+Mcu.Pin68=PB6
+Mcu.Pin69=PB7
 Mcu.Pin7=PC15/OSC32_OUT
-Mcu.Pin70=PB7
+Mcu.Pin70=PE1
 Mcu.Pin71=VP_SYS_VS_Systick
 Mcu.Pin72=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin8=PH0/OSC_IN
@@ -142,7 +142,7 @@ PA1.Signal=S_TIM5_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USART_RX
 PA10.Locked=true
-PA10.Mode=Synchronous
+PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=MCU_DD-
@@ -188,15 +188,10 @@ PA6.Signal=SPI1_MISO
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=USART_CK
-PA8.Locked=true
-PA8.Mode=Synchronous
-PA8.Signal=USART1_CK
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USART_TX
 PA9.Locked=true
-PA9.Mode=Synchronous
+PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=SS_Y
@@ -375,6 +370,10 @@ PD9.GPIOParameters=GPIO_Label
 PD9.GPIO_Label=Z_MAX
 PD9.Locked=true
 PD9.Signal=GPIO_Input
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=EXT_D5
+PE1.Locked=true
+PE1.Signal=GPIO_Output
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=E_DIR
 PE10.Locked=true
@@ -548,8 +547,8 @@ TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
-USART1.IPParameters=VirtualMode-Synchronous
-USART1.VirtualMode-Synchronous=VM_SYNC
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
