Add diodes and PU to endstops and fans (SCH only)
For extra protection and PU, we added some diodes and a
pull up resistor to the endstops and the fan tachometer.

--- a/remram.ioc
+++ b/remram.ioc
@@ -550,7 +550,7 @@ TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channe
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CDC
-USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-CDC_FS
 USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
