Add series resistors to EXT-2 SPI lines
To help with noisy ribbon cables and SD card communication we
add three 100 ohm resistors in series for the SPI pins.

--- a/remram.ioc
+++ b/remram.ioc
@@ -118,8 +118,8 @@ Mcu.PinsNb=73
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F765VITx
-MxCube.Version=4.25.1
-MxDb.Version=DB.4.0.251
+MxCube.Version=4.26.1
+MxDb.Version=DB.4.0.261
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -276,11 +276,11 @@ PC13.GPIO_Label=SD_CARD_DET
 PC13.Locked=true
 PC13.Signal=GPIO_Output
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
-PC14/OSC32_IN.GPIO_Label=BTN_EN2
+PC14/OSC32_IN.GPIO_Label=BTN_EN1
 PC14/OSC32_IN.Locked=true
 PC14/OSC32_IN.Signal=GPIO_Input
 PC15/OSC32_OUT.GPIOParameters=GPIO_Label
-PC15/OSC32_OUT.GPIO_Label=BTN_EN1
+PC15/OSC32_OUT.GPIO_Label=BTN_EN2
 PC15/OSC32_OUT.Locked=true
 PC15/OSC32_OUT.Signal=GPIO_Input
 PC2.GPIOParameters=GPIO_Label
@@ -559,3 +559,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+board=custom
