Changed PIN configuration
Removed KILL_PIN and added / changed SS_SD and SS_SDLCD.

--- a/remram.ioc
+++ b/remram.ioc
@@ -16,7 +16,7 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.ScanConvMode=DISABLE
+ADC1.ScanConvMode=ADC_SCAN_ENABLE
 ADC1.master=1
 CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
@@ -43,24 +43,24 @@ Mcu.Name=STM32F765V(G-I)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PC0
-Mcu.Pin11=PC1
-Mcu.Pin12=PC2
-Mcu.Pin13=PC3
-Mcu.Pin14=PA0/WKUP
-Mcu.Pin15=PA1
-Mcu.Pin16=PA2
-Mcu.Pin17=PA3
-Mcu.Pin18=PA4
-Mcu.Pin19=PA5
+Mcu.Pin10=PC1
+Mcu.Pin11=PC2
+Mcu.Pin12=PC3
+Mcu.Pin13=PA0/WKUP
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA3
+Mcu.Pin17=PA4
+Mcu.Pin18=PA5
+Mcu.Pin19=PA6
 Mcu.Pin2=PE4
-Mcu.Pin20=PA6
-Mcu.Pin21=PA7
-Mcu.Pin22=PC4
-Mcu.Pin23=PC5
-Mcu.Pin24=PB0
-Mcu.Pin25=PB1
-Mcu.Pin26=PB2
+Mcu.Pin20=PA7
+Mcu.Pin21=PC4
+Mcu.Pin22=PC5
+Mcu.Pin23=PB0
+Mcu.Pin24=PB1
+Mcu.Pin25=PB2
+Mcu.Pin26=PE7
 Mcu.Pin27=PE10
 Mcu.Pin28=PE11
 Mcu.Pin29=PE12
@@ -75,7 +75,7 @@ Mcu.Pin36=PB13
 Mcu.Pin37=PB14
 Mcu.Pin38=PB15
 Mcu.Pin39=PD8
-Mcu.Pin4=PE6
+Mcu.Pin4=PC13
 Mcu.Pin40=PD9
 Mcu.Pin41=PD10
 Mcu.Pin42=PD11
@@ -86,7 +86,7 @@ Mcu.Pin46=PD15
 Mcu.Pin47=PC6
 Mcu.Pin48=PC7
 Mcu.Pin49=PC8
-Mcu.Pin5=PC13
+Mcu.Pin5=PC14/OSC32_IN
 Mcu.Pin50=PC9
 Mcu.Pin51=PA9
 Mcu.Pin52=PA10
@@ -97,7 +97,7 @@ Mcu.Pin56=PA14
 Mcu.Pin57=PA15
 Mcu.Pin58=PC10
 Mcu.Pin59=PC11
-Mcu.Pin6=PC14/OSC32_IN
+Mcu.Pin6=PC15/OSC32_OUT
 Mcu.Pin60=PC12
 Mcu.Pin61=PD0
 Mcu.Pin62=PD4
@@ -108,12 +108,12 @@ Mcu.Pin66=PB4
 Mcu.Pin67=PB5
 Mcu.Pin68=PB6
 Mcu.Pin69=PB7
-Mcu.Pin7=PC15/OSC32_OUT
+Mcu.Pin7=PH0/OSC_IN
 Mcu.Pin70=PE1
 Mcu.Pin71=VP_SYS_VS_Systick
 Mcu.Pin72=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.Pin8=PH0/OSC_IN
-Mcu.Pin9=PH1/OSC_OUT
+Mcu.Pin8=PH1/OSC_OUT
+Mcu.Pin9=PC0
 Mcu.PinsNb=73
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -226,7 +226,7 @@ PB15.GPIO_Label=Y_MAX
 PB15.Locked=true
 PB15.Signal=GPIO_Input
 PB2.GPIOParameters=GPIO_Label
-PB2.GPIO_Label=SS_SD
+PB2.GPIO_Label=SS_SDLCD
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
@@ -414,10 +414,10 @@ PE5.GPIOParameters=GPIO_Label
 PE5.GPIO_Label=EXT_D1
 PE5.Locked=true
 PE5.Signal=GPIO_Output
-PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=KILL_PIN
-PE6.Locked=true
-PE6.Signal=GPIO_Input
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=SS_SD
+PE7.Locked=true
+PE7.Signal=GPIO_Output
 PH0/OSC_IN.Locked=true
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
